public interface IDieable
{
	void Die();
}
