using UnityEngine;

public class PlayerHealth : MonoBehaviour
{
	// Use this for initialization
	public void Initialize()
	{

	}

	// Update is called once per frame
	void Update()
	{

	}
}
