using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerMovement : MonoBehaviour {

	// Use this for initialization
	void Initialize () {
		
	}
	
	// Update is called once per frame
	void Update () {
		
	}
}
