@startuml
namespace Input{
    class DebugInput
    {
    }
    DebugInput ..d|> IInput
    class JoyStickInput
    {
    }
    JoyStickInput ..d|> IInput
        interface IInput
    {
       + Vector3 InputRightStick
       + Vector3 InputLeftStick
       + Vector3 PressAttackButton
    }
}

namespace Player{
    class PlayerHealth
    {

    }
    PlayerHealth ..u> Player.PlayerCore

    class PlayerCore
    {

    }
    PlayerCore ..u> Input.IInput
    
    class PlayerMovement
    { 
          
      - Turn()
      - Move()
    }
    PlayerMovement ..u> Player.PlayerCore
    
    class PlayerAttack
    { 
      - Attack()
    }
    PlayerAttack ..u> Player.PlayerCore
}

namespace Weapon{
    abstract class Weapon
    {
        + Fire()
    }
    Weapon ..> Bullet

    abstract class Bullet
}

namespace Enemy{
    class EnemyHealth
    {

    }
}

interface IDamageable
{
    + TakeDamage(T damageTaken)
}
Player.PlayerHealth ..|> IDamageable
Enemy.EnemyHealth ..|> IDamageable


interface IDieable
{
    + Die()
}
Player.PlayerHealth ..|> IDieable
Enemy.EnemyHealth ..|> IDieable



@enduml